==> petrpulc/flash_cc2531/CCDebugger.c <==
#include <wiringPi.h>
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <stdbool.h>
#include <time.h>
#include "CCDebugger.h"

int cc_init() {
    if (wiringPiSetup() == -1) {
        printf("No wiring pi detected.\n");
        return 0;
    }

    // Prepare CC Pins
    pinMode(PIN_DC, OUTPUT);
    pinMode(PIN_DD, OUTPUT);
    pinMode(PIN_RST, OUTPUT);
    digitalWrite(PIN_DC, LOW);
    digitalWrite(PIN_DD, LOW);
    digitalWrite(PIN_RST, LOW);

    // Prepare default direction
    cc_setDDDirection(INPUT);

    // Default CCDebug instruction set for CC254x
    instr[INSTR_VERSION] = 1;
    instr[I_HALT] = 0x40;
    instr[I_RESUME] = 0x48;
    instr[I_RD_CONFIG] = 0x20;
    instr[I_WR_CONFIG] = 0x18;
    instr[I_DEBUG_INSTR_1] = 0x51;
    instr[I_DEBUG_INSTR_2] = 0x52;
    instr[I_DEBUG_INSTR_3] = 0x53;
    instr[I_GET_CHIP_ID] = 0x68;
    instr[I_GET_PC] = 0x28;
    instr[I_READ_STATUS] = 0x30;
    instr[I_STEP_INSTR] = 0x58;
    instr[I_CHIP_ERASE] = 0x10;

    // We are active by default
    cc_active = true;
}

void cc_setActive(uint8_t on) {
    // Reset error flag
    errorFlag = CC_ERROR_NONE;

    // Continue only if active
    if (on == cc_active) return;
    cc_active = on;

    if (on) {
        // Prepare CC Pins
        pinMode(PIN_DC, OUTPUT);
        pinMode(PIN_DD, OUTPUT);
        pinMode(PIN_RST, OUTPUT);
        digitalWrite(PIN_DC, LOW);
        digitalWrite(PIN_DD, LOW);
        digitalWrite(PIN_RST, LOW);

        // Default direction is INPUT
        cc_setDDDirection(INPUT);
    } else {
        // Before deactivating, exit debug mode
        if (inDebugMode)
            cc_exit();

        // Put everything in inactive mode
        pinMode(PIN_DC, INPUT);
        pinMode(PIN_DD, INPUT);
        pinMode(PIN_RST, INPUT);
        digitalWrite(PIN_DC, LOW);
        digitalWrite(PIN_DD, LOW);
        digitalWrite(PIN_RST, LOW);
    }
}

uint8_t cc_enter() {
    if (!cc_active) {
        errorFlag = CC_ERROR_NOT_ACTIVE;
        return 0;
    }

    // Reset error flag
    errorFlag = CC_ERROR_NONE;

    // Enter debug mode
    digitalWrite(PIN_RST, LOW);
    cc_delay(200);
    digitalWrite(PIN_DC, HIGH);
    cc_delay(3);
    digitalWrite(PIN_DC, LOW);
    cc_delay(3);
    digitalWrite(PIN_DC, HIGH);
    cc_delay(3);
    digitalWrite(PIN_DC, LOW);
    cc_delay(4);
    digitalWrite(PIN_RST, HIGH);
    cc_delay(200);

    // We are now in debug mode
    inDebugMode = 1;

    // Success
    return 0;
}

uint8_t cc_write(uint8_t data) {
    if (!cc_active) {
        errorFlag = CC_ERROR_NOT_ACTIVE;
        return 0;
    }

    if (!inDebugMode) {
        errorFlag = CC_ERROR_NOT_DEBUGGING;
        return 0;
    }

    uint8_t cnt;

    // Make sure DD is on output
    cc_setDDDirection(OUTPUT);

    // Sent uint8_ts
    for (cnt = 8; cnt; cnt--) {
        // First put data bit on bus
        if (data & 0x80)
            digitalWrite(PIN_DD, HIGH);
        else
            digitalWrite(PIN_DD, LOW);

        // Place clock on high (other end reads data)
        digitalWrite(PIN_DC, HIGH);

        // Shift & Delay
        data <<= 1;
        cc_delay(2);

        // Place clock down
        digitalWrite(PIN_DC, LOW);
        cc_delay(2);
    }

    return 0;
}

uint8_t cc_switchRead(uint8_t maxWaitCycles) {
    if (!cc_active) {
        errorFlag = CC_ERROR_NOT_ACTIVE;
        return 0;
    }
    if (!inDebugMode) {
        errorFlag = CC_ERROR_NOT_DEBUGGING;
        return 0;
    }

    uint8_t cnt;
    uint8_t didWait = 0;

    // Switch to input
    cc_setDDDirection(INPUT);

    // Wait at least 83 ns before checking state t(dir_change)
    cc_delay(2);

    // Wait for DD to go LOW (Chip is READY)
    while (digitalRead(PIN_DD) == HIGH) {
        // Do 8 clock cycles
        for (cnt = 8; cnt; cnt--) {
            digitalWrite(PIN_DC, HIGH);
            cc_delay(2);
            digitalWrite(PIN_DC, LOW);
            cc_delay(2);
        }

        // Let next function know that we did wait
        didWait = 1;

        // Check if we ran out if wait cycles
        if (!--maxWaitCycles) {
            // If we are waiting for too long, we have lost the chip,
            // so also assume we are out of debugging mode
            errorFlag = CC_ERROR_NOT_WIRED;
            inDebugMode = 0;

            return 0;
        }
    }

    // Wait t(sample_wait)
    if (didWait) cc_delay(2);

    return 0;
}

uint8_t cc_read() {
    if (!cc_active) {
        errorFlag = CC_ERROR_NOT_ACTIVE;
        return 0;
    }

    uint8_t cnt;
    uint8_t data = 0;

    // Switch to input
    cc_setDDDirection(INPUT);

    // Send 8 clock pulses if we are HIGH
    for (cnt = 8; cnt; cnt--) {
        digitalWrite(PIN_DC, HIGH);
        cc_delay(2);

        // Shift and read
        data <<= 1;
        if (digitalRead(PIN_DD) == HIGH)
            data |= 0x01;

        digitalWrite(PIN_DC, LOW);
        cc_delay(2);
    }

    return data;
}

void cc_setDDDirection(uint8_t direction) {
    // Switch direction if changed
    if (direction == ddDirection) return;

    // Handle new direction
    digitalWrite(PIN_DD, LOW); // Switch to low
    pinMode(PIN_DD, direction);   // Set direction
    digitalWrite(PIN_DD, LOW); // Switch to low

    ddDirection = direction;
}
