==> nobodyguy/flash_cc2531/CCDebugger.c <==
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <stdbool.h>
#include <time.h>
#include "time.h"
#include "gpio.h"
#include "CCDebugger.h"
#define INSTR_VERSION   0
#define I_HALT          1
#define I_RESUME        2
#define I_RD_CONFIG     3
#define I_WR_CONFIG     4
#define I_DEBUG_INSTR_1 5
#define I_DEBUG_INSTR_2 6
#define I_DEBUG_INSTR_3 7
#define I_GET_CHIP_ID   8
#define I_GET_PC        9
#define I_READ_STATUS   10
#define I_STEP_INSTR    11
#define I_CHIP_ERASE    12
#define I_SET_HW_BRKPNT    13
#define I_GET_BM    14
#define I_BURST_WRITE    15

int cc_init( const char* gpioDev, int pRST, int pDC, int pDD )
{
  if(pRST>=0) pinRST=pRST;
  if(pDC>=0) pinDC=pDC;
  if(pDD>=0) pinDD=pDD;

  if(time_init() == -1){
    printf("time init failed\n");
    return 0;
  }

  if(gpio_init(gpioDev) == -1){
    printf("gpio init failed\n");
    return 0;
  }
  cc_delay_calibrate();

  // Prepare CC Pins
  gpio_pin_configure(pinDC,        GPIO_OUTPUT);
  gpio_pin_configure(pinDD,      GPIO_OUTPUT);
  gpio_pin_configure(pinRST,       GPIO_OUTPUT);
  gpio_pin_set(pinDC,   GPIO_LOW);
  gpio_pin_set(pinDD, GPIO_LOW);
  gpio_pin_set(pinRST,  GPIO_LOW);

  // Prepare default direction
  cc_setDDDirection(GPIO_INPUT);

  // Default CCDebug instruction set for CC254x
  instr[INSTR_VERSION]    = 1;
  instr[I_HALT]           = 0x40;
  instr[I_RESUME]         = 0x48;
  instr[I_RD_CONFIG]      = 0x20;
  instr[I_WR_CONFIG]      = 0x18;
  instr[I_DEBUG_INSTR_1]  = 0x51;
  instr[I_DEBUG_INSTR_2]  = 0x52;
  instr[I_DEBUG_INSTR_3]  = 0x53;
  instr[I_GET_CHIP_ID]    = 0x68;
  instr[I_GET_PC]         = 0x28;
  instr[I_READ_STATUS]    = 0x30;
  instr[I_STEP_INSTR]     = 0x58;
  instr[I_CHIP_ERASE]     = 0x10;

  // We are active by default
  cc_active = true;

}

void cc_setActive( uint8_t on )
{

  // Reset error flag
  errorFlag = CC_ERROR_NONE;

  // Continue only if active
  if (on == cc_active) return;
  cc_active = on;

  if (on) {

    // Prepare CC Pins
    gpio_pin_configure(pinDC,        GPIO_OUTPUT);
    gpio_pin_configure(pinDD,      GPIO_OUTPUT);
    gpio_pin_configure(pinRST,       GPIO_OUTPUT);
    gpio_pin_set(pinDC,   GPIO_LOW);
    gpio_pin_set(pinDD, GPIO_LOW);
    gpio_pin_set(pinRST,  GPIO_LOW);

    // Default direction is GPIO_INPUT
    cc_setDDDirection(GPIO_INPUT);

  } else {

    // Before deactivating, exit debug mode
    if (inDebugMode)
      cc_exit();

    // Put everything in inactive mode
    gpio_pin_configure(pinDC,        GPIO_INPUT);
    gpio_pin_configure(pinDD,      GPIO_INPUT);
    gpio_pin_configure(pinRST,       GPIO_INPUT);
    gpio_pin_set(pinDC,   GPIO_LOW);
    gpio_pin_set(pinDD, GPIO_LOW);
    gpio_pin_set(pinRST,  GPIO_LOW);

  }
}

uint8_t cc_enter()
{
  if (!cc_active) {
    errorFlag = CC_ERROR_NOT_ACTIVE;
    return 0;
  }
  // =============

  // Reset error flag
  errorFlag = CC_ERROR_NONE;

  // Enter debug mode
  gpio_pin_set(pinRST, GPIO_LOW);
  cc_delay(200);
  gpio_pin_set(pinDC, GPIO_HIGH);
  cc_delay(3);
  gpio_pin_set(pinDC, GPIO_LOW);
  cc_delay(3);
  gpio_pin_set(pinDC, GPIO_HIGH);
  cc_delay(3);
  gpio_pin_set(pinDC, GPIO_LOW);
  cc_delay(4);
  gpio_pin_set(pinRST, GPIO_HIGH);
  cc_delay(200);

  // We are now in debug mode
  inDebugMode = 1;

  // =============

  // Success
  return 0;

}

uint8_t cc_write( uint8_t data )
{
  if (!cc_active) {
    errorFlag = CC_ERROR_NOT_ACTIVE;
    return 0;
  };
  if (!inDebugMode) {
    errorFlag = CC_ERROR_NOT_DEBUGGING;
    return 0;
  }
  // =============

  uint8_t cnt;

  // Make sure DD is on output
  cc_setDDDirection(GPIO_OUTPUT);

  // Sent uint8_ts
  for (cnt = 8; cnt; cnt--) {

    // First put data bit on bus
    if (data & 0x80)
      gpio_pin_set(pinDD, GPIO_HIGH);
    else
      gpio_pin_set(pinDD, GPIO_LOW);

    // Place clock on high (other end reads data)
    gpio_pin_set(pinDC, GPIO_HIGH);

    // Shift & Delay
    data <<= 1;
    cc_delay(2);

    // Place clock down
    gpio_pin_set(pinDC, GPIO_LOW);
    cc_delay(2);

  }

  // =============
  return 0;
}

uint8_t cc_switchRead(uint8_t maxWaitCycles)
{
  if (!cc_active) {
    errorFlag = CC_ERROR_NOT_ACTIVE;
    return 0;
  }
  if (!inDebugMode) {
    errorFlag = CC_ERROR_NOT_DEBUGGING;
    return 0;
  }
  // =============

  uint8_t cnt;
  uint8_t didWait = 0;

  // Switch to input
  cc_setDDDirection(GPIO_INPUT);

  // Wait at least 83 ns before checking state t(dir_change)
  cc_delay(2);

  // Wait for DD to go LOW (Chip is READY)
  while (gpio_pin_get(pinDD) == GPIO_HIGH) {

    // Do 8 clock cycles
    for (cnt = 8; cnt; cnt--) {
      gpio_pin_set(pinDC, GPIO_HIGH);
      cc_delay(2);
      gpio_pin_set(pinDC, GPIO_LOW);
      cc_delay(2);
    }

    // Let next function know that we did wait
    didWait = 1;

    // Check if we ran out if wait cycles
    if (!--maxWaitCycles) {

      // If we are waiting for too long, we have lost the chip,
      // so also assume we are out of debugging mode
      errorFlag = CC_ERROR_NOT_WIRED;
      inDebugMode = 0;


      return 0;
    }
  }

  // Wait t(sample_wait)
  if (didWait) cc_delay(2);

  // =============
  return 0;
}

uint8_t cc_read()
{
  if (!cc_active) {
    errorFlag = CC_ERROR_NOT_ACTIVE;
    return 0;
  }
  // =============

  uint8_t cnt;
  uint8_t data = 0;

  // Switch to input
  cc_setDDDirection(GPIO_INPUT);

  // Send 8 clock pulses if we are HIGH
  for (cnt = 8; cnt; cnt--) {
    gpio_pin_set(pinDC, GPIO_HIGH);
    cc_delay(2);

    // Shift and read
    data <<= 1;
    if (gpio_pin_get(pinDD) == GPIO_HIGH)
      data |= 0x01;

    gpio_pin_set(pinDC, GPIO_LOW);
    cc_delay(2);
  }

  // =============
  return data;
}

void cc_setDDDirection( uint8_t direction )
{

  // Switch direction if changed
  if (direction == ddIsOutput) return;
  ddIsOutput = direction;

  // Handle new direction
  if (ddIsOutput) {
    gpio_pin_set(pinDD, GPIO_LOW); // Disable pull-up
    gpio_pin_configure(pinDD, GPIO_OUTPUT);   // Enable output
    gpio_pin_set(pinDD, GPIO_LOW); // Switch to low
  } else {
    gpio_pin_set(pinDD, GPIO_LOW); // Disable pull-up
    gpio_pin_configure(pinDD, GPIO_INPUT);    // Disable output
    gpio_pin_set(pinDD, GPIO_LOW); // Don't use output pull-up
  }

}
